# LLM_Project

./: .gitignore  README.md  demo.py  pyproject.toml  run.py
data/processed/: enterprise_intelligence.db
ingestion/: ingest_to_sqlite.py
langchain_layer/agent/: decision_agent.py
langchain_layer/db/: connection.py  schemas.py
langchain_layer/intent/: intent_chain.py
llm/: groq_llm.py
