[project]
name = "final-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "altair<5",
    "langchain>=1.2.8",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.19.0",
]
